Changed udp recive from server to sse events from server

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
+        android:usesCleartextTraffic="true"
         android:icon="@drawable/ic_launcher"
         android:isGame="true"
         android:appCategory="game"
