--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ project(":core") {
         implementation "io.ktor:ktor-client-cio:$ktor_version"
         implementation 'com.squareup.okhttp3:okhttp:4.9.3'
         implementation("com.squareup.okhttp3:okhttp-sse:4.9.3")
+        implementation "com.algorand:algosdk:2.4.0"
     }
 }
 
