--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,5 @@ org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx1500m
 org.gradle.configureondemand=false
 android.enableR8.fullMode=false
+android.useAndroidX=true
 org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64
