--- a/build.gradle
+++ b/build.gradle
@@ -87,5 +87,8 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86_64"
         api "de.tomgrill.gdxdialogs:gdx-dialogs-android:1.3.0"
         api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+        implementation 'com.alphacephei:vosk-android:0.3.47'
+        implementation'com.android.support:support-v4:23.0.0'
+        implementation 'com.google.mediapipe:tasks-text:latest.release'
     }
 }
